--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 ---
 layout: default
-title: zhangshuming,website
 ---
-<div class="blurb">
-	<h1>Hi there, I'm zhangshuming!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>Home</title>
+</head>
+
+<body>
+
+
+</body>
+
+</html>
