--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ---
+layout: default
 ---
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
+    <title>Home</title>
 </head>
 
 <body>
