--- a/me.html
+++ b/me.html
@@ -466,7 +466,7 @@ title: Markdown 使用指南
         <h2><i class="fas fa-bullseye"></i> 求职意向</h2>
         <div class="info-grid">
           <p><i class="fas fa-map-marker-alt"></i> <strong>期望地区:</strong> 上海</p>
-          <p><i class="fas fa-money-bill-wave"></i> <strong>期望月薪:</strong> 19000元/月</p>
+          <p><i class="fas fa-money-bill-wave"></i> <strong>期望月薪:</strong> 19000元/面谈</p>
           <p><i class="fas fa-briefcase"></i> <strong>工作性质:</strong> 全职</p>
           <p><i class="fas fa-code"></i> <strong>期望职业:</strong> Web前端开发 / 移动端开发（uniapp） / WebGis开发（Cesium/Openlayers）
           </p>
