--- a/me.html
+++ b/me.html
@@ -359,7 +359,7 @@ title: 张树铭个人简历
   <div class="container">
     <div class="sidebar">
       <div class="profile-pic">
-        <img src="/assets/cv/me.JPG" alt="张树铭头像">
+        <img src="/assets/cv/me.jpeg" alt="张树铭头像">
       </div>
       <section class="section personal-info">
         <h2><i class="fas fa-user"></i> 个人信息</h2>
