--- a/me.html
+++ b/me.html
@@ -22,7 +22,7 @@ title: 张树铭个人简历
 
     body {
       font-family: 'Noto Sans SC', sans-serif;
-      background: #E6F0FA;
+      background: #dbecfb;
       /* Light blue inspired by ZStack */
       color: #4A4A4A;
       line-height: 1.6;
@@ -60,7 +60,7 @@ title: 张树铭个人简历
       width: 30%;
       background: #FFFFFF;
       padding: 30px;
-      border-right: 2px solid #0052CC;
+      border-right: 2px solid #005596;
       /* Vibrant blue */
     }
 
@@ -73,7 +73,7 @@ title: 张树铭个人简历
       width: 120px;
       height: 120px;
       border-radius: 50%;
-      border: 3px solid #0052CC;
+      border: 3px solid #005596;
       object-fit: cover;
     }
 
@@ -85,7 +85,7 @@ title: 张树铭个人简历
     .header {
       text-align: center;
       padding: 25px;
-      background: #0052CC;
+      background: #005596;
       color: #FFFFFF;
       border-radius: 10px 10px 0 0;
       margin-bottom: 20px;
@@ -109,7 +109,7 @@ title: 张树铭个人简历
     .section h2 {
       font-family: 'Source Sans Pro', sans-serif;
       font-size: 1.8em;
-      color: #0052CC;
+      color: #005596;
       margin-bottom: 15px;
       display: flex;
       align-items: center;
@@ -117,7 +117,7 @@ title: 张树铭个人简历
 
     .section h2 i {
       margin-right: 10px;
-      color: #0052CC;
+      color: #005596;
     }
 
     .section h3 {
@@ -145,14 +145,14 @@ title: 张树铭个人简历
       background: #B3D4FF;
       /* Pale blue */
       border-radius: 6px;
-      border: 1px solid #0052CC;
+      border: 1px solid #005596;
       display: flex;
       align-items: center;
     }
 
     .info-grid p i {
       margin-right: 10px;
-      color: #0052CC;
+      color: #005596;
     }
 
     .project-card,
@@ -173,7 +173,7 @@ title: 张树铭个人简历
 
     .project-card .toggle-btn {
       cursor: pointer;
-      color: #0052CC;
+      color: #005596;
       font-size: 0.9em;
       margin-top: 10px;
       display: inline-block;
@@ -218,12 +218,12 @@ title: 张树铭个人简历
       border-radius: 6px;
       overflow: hidden;
       position: relative;
-      border: 1px solid #0052CC;
+      border: 1px solid #005596;
     }
 
     .skill-bar-fill {
       height: 100%;
-      background: #0052CC;
+      background: #005596;
       transition: width 1.5s ease-in-out;
     }
 
@@ -239,7 +239,7 @@ title: 张树铭个人简历
       top: 0;
       bottom: 0;
       width: 4px;
-      background: #0052CC;
+      background: #005596;
       border-radius: 2px;
     }
 
@@ -259,9 +259,9 @@ title: 张树铭个人简历
       width: 14px;
       height: 14px;
       background: #FFFFFF;
-      border: 2px solid #0052CC;
+      border: 2px solid #005596;
       border-radius: 50%;
-      color: #0052CC;
+      color: #005596;
       font-size: 10px;
       display: flex;
       align-items: center;
@@ -286,7 +286,7 @@ title: 张树铭个人简历
     /* Typing Animation */
     .typing::after {
       content: '|';
-      color: #0052CC;
+      color: #005596;
       animation: blink 0.7s infinite;
     }
 
@@ -309,7 +309,7 @@ title: 张树铭个人简历
 
       .sidebar {
         border-right: none;
-        border-bottom: 2px solid #0052CC;
+        border-bottom: 2px solid #005596;
       }
 
       .header-title {
