--- a/post.html
+++ b/post.html
@@ -1,17 +1,74 @@
 ---
-layout: default
+layout: post
 ---
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 
 <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>博客文章列表</title>
+    <style>
+        .container .articles-grid .article-card .article-tags .article-tag {
+            background-color: #f0f0f0;
+            color: #666;
+            border-radius: 12px;
+            font-size: 0.75rem;
+            border: 1px solid #ddd;
+            padding: 3px 8px;
+            margin-right: 5px;
+        }
+
+        .article-card {
+            padding: 20px;
+            cursor: pointer;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .article-card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        }
+    </style>
 </head>
 
 <body>
+    <div class="container">
+        <div class="articles-grid">
+            {% assign sorted_posts = site.posts | sort: 'date' | reverse %}
+            {% for post in sorted_posts %}
+            <article class="article-card {% if forloop.first %}featured{% endif %}" data-url="{{ post.url }}">
+                <h2>{{ post.title }}</h2>
+                <div class="date">📅 {{ post.date | date: "%Y-%m-%d" }}</div>
+                <div class="excerpt">
+                    {{ post.excerpt }}
+                </div>
+                {% if post.tags %}
+                <div class="article-tags">
+                    {% for tag in post.tags %}
+                    <span class="article-tag">{{ tag }}</span>
+                    {% endfor %}
+                </div>
+                {% endif %}
+            </article>
+            {% endfor %}
+        </div>
+    </div>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const articleCards = document.querySelectorAll('.article-card');
 
+            articleCards.forEach(card => {
+                card.addEventListener('click', function () {
+                    const url = this.getAttribute('data-url');
+                    if (url) {
+                        window.location.href = url;
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
