--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ title: 技术博客
 <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="/css/style.css">
     <style>
         :root {
@@ -260,7 +262,7 @@ title: 技术博客
     </div>
 
     <footer class="footer">
-        <p>&copy; 2024 技术博客. 保留所有权利.</p>
+        <p>&copy; 2022 技术博客. 保留所有权利.</p>
     </footer>
 </body>
 </html> 
