--- a/me.html
+++ b/me.html
@@ -9,6 +9,8 @@ title: 张树铭个人简历
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>张树铭 | Web前端与可视化工程师</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap"
     rel="stylesheet">
