--- a/post.html
+++ b/post.html
@@ -8,6 +8,8 @@ is_post_list: true
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <title>博客文章列表</title>
     <style>
         .container .articles-grid .article-card .article-tags .article-tag {
