--- a/me.html
+++ b/me.html
@@ -458,6 +458,15 @@ title: 张树铭个人简历
         <p><i class="fas fa-graduation-cap"></i> <strong>培训:</strong> 高级Web工程师 | 开课吧 | 2020.08 - 2020.12</p>
         <p><i class="fas fa-language"></i> <strong>语言:</strong> 英语（读写良好，听说一般）</p>
       </section>
+      <section class="section hobbies">
+        <h2><i class="fas fa-heart"></i> 个人爱好</h2>
+        <div class="info-grid">
+          <p><i class="fas fa-bicycle"></i> <strong>骑行:</strong> 享受户外骑行，探索城市与自然风光</p>
+          <p><i class="fas fa-music"></i> <strong>弹钢琴:</strong> 热爱音乐，享受弹奏钢琴的乐趣</p>
+          <p><i class="fas fa-globe"></i> <strong>Google:</strong> 主要查找各种好奇的资料，满足求知欲</p>
+          <p><i class="fas fa-sticky-note"></i> <strong>记录:</strong> 包括学习和发现，保持知识积累</p>
+        </div>
+      </section>
     </div>
     <div class="main-content">
       <section class="section job-intention">
