--- a/me.html
+++ b/me.html
@@ -128,11 +128,12 @@ title: 张树铭个人简历
       margin: 10px 0;
     }
 
-    .section .job-assets{
+    .section .job-assets {
       float: right;
       margin-top: 10px;
-      a{
-        margin-left:10px;
+
+      a {
+        margin-left: 10px;
       }
     }
 
@@ -140,6 +141,10 @@ title: 张树铭个人简历
       display: grid;
       grid-template-columns: 1fr;
       gap: 10px;
+    }
+
+    .info-grid strong {
+      white-space: nowrap;
     }
 
     .info-grid p {
@@ -369,7 +374,7 @@ title: 张树铭个人简历
           <p><i class="fas fa-id-card"></i> <strong>姓名:</strong> 张树铭</p>
           <p><i class="fas fa-venus-mars"></i> <strong>性别:</strong> 男</p>
           <p><i class="fas fa-birthday-cake"></i> <strong>年龄:</strong> 26岁 (1998年7月)</p>
-          <p><i class="fas fa-briefcase"></i> <strong>工作经验:</strong> 6年</p>
+          <p><i class="fas fa-briefcase"></i> <strong>工作经验:</strong> 5年</p>
           <p><i class="fas fa-map-marker-alt"></i> <strong>现居:</strong> 上海 | <strong>户口:</strong> 临汾</p>
           <p><i class="fas fa-user-check"></i> <strong>状态:</strong> 离职</p>
           <p><i class="fas fa-phone"></i> <strong>手机:</strong> 13391970870</p>
@@ -461,9 +466,9 @@ title: 张树铭个人简历
       <section class="section hobbies">
         <h2><i class="fas fa-heart"></i> 个人爱好</h2>
         <div class="info-grid">
-          <p><i class="fas fa-bicycle"></i> <strong>骑行:</strong> 享受户外骑行，探索城市与自然风光</p>
-          <p><i class="fas fa-music"></i> <strong>弹钢琴:</strong> 热爱音乐，享受弹奏钢琴的乐趣</p>
-          <p><i class="fas fa-globe"></i> <strong>Google:</strong> 主要查找各种好奇的资料，满足求知欲</p>
+          <p><i class="fas fa-bicycle"></i> <strong>骑行:</strong> 户外骑行、健身</p>
+          <p><i class="fas fa-music"></i> <strong>弹钢琴:</strong> 培养一些爱好</p>
+          <p><i class="fas fa-globe"></i> <strong>Google:</strong> 查找各种好奇的资料，满足求知欲</p>
           <p><i class="fas fa-sticky-note"></i> <strong>记录:</strong> 包括学习和发现，保持知识积累</p>
         </div>
       </section>
