--- a/me.html
+++ b/me.html
@@ -549,6 +549,21 @@ title: 张树铭个人简历
           <span class="toggle-btn">展开详情</span>
         </div>
         <div class="project-card">
+          <h3>上海地铁模拟系统</h3>
+          <p><strong>项目描述:</strong> 使用Nextjs + Mapbox搭建一套高效的3d地铁展示系统。</p>
+          <div class="project-details">
+            <p><strong>技术栈:</strong> Nextjs, Mapbox</p>
+            <p><strong>职责:</strong></p>
+            <ul>
+              <li>搭建前后端项目框架，解决项目中的各种问题</li>
+              <li>调研shanghai metro的公开数据整理数据架构</li>
+              <li>优化项目数据保密性</li>
+            </ul>
+            <p><strong>特色:</strong> 各条线路上百条地铁同时运行不卡顿、数据加密、github自动化部署</p>
+          </div>
+          <span class="toggle-btn">展开详情</span>
+        </div>
+        <div class="project-card">
           <h3>1XX8 (2024.07 - 2025.01)</h3>
           <p><strong>项目描述:</strong> 卫星数据操控系统，支持数据采集、信号干扰及终端信号模拟。</p>
           <div class="project-details">
